tests/ui/const-generics/generic_const_exprs/issue-69654.stderr
error[E0423]: cannot find value `T` in this scope
  --> $DIR/issue-69654.rs:5:25
   |
LL | impl<T> Bar<T> for [u8; T] {}
   |                         ^ not found in this scope
   |
   = note: a type parameter named `T` exists in another namespace
help: you might have meant to write a const parameter here
   |
LL | impl<const T: /* Type */> Bar<T> for [u8; T] {}
   |      +++++  ++++++++++++

error[E0599]: the associated function or constant `foo` exists for struct `Foo<_>`, but its trait bounds were not satisfied
  --> $DIR/issue-69654.rs:17:10
   |
LL | struct Foo<const N: usize> {}
   | -------------------------- associated function or constant `foo` not found for this struct
...
LL |     Foo::foo();
   |          ^^^ associated function or constant cannot be called on `Foo<_>` due to unsatisfied trait bounds
   |
note: trait bound `[u8; _]: Bar<[(); _]>` was not satisfied
  --> $DIR/issue-69654.rs:11:14
   |
LL | impl<const N: usize> Foo<N>
   |                      ------
LL | where
LL |     [u8; N]: Bar<[(); N]>,
   |              ^^^^^^^^^^^^ unsatisfied trait bound introduced here

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0423, E0599.
For more information about an error, try `rustc --explain E0423`.
